[metadata]
name = NaparIO
version = 0.0.1
author = Léo Tellez-Arenas
author_email = leo.tellez-arenas@mri.cnrs.fr
url = https://github.com/MontpellierRessourcesImagerie/NaparIO
license = MIT
description = A plugin that provide better save/load for all opened layers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/MontpellierRessourcesImagerie/NaparIO/issues
    Documentation = https://github.com/MontpellierRessourcesImagerie/NaparIO#README.md
    Source Code = https://github.com/MontpellierRessourcesImagerie/NaparIO
    User Support = https://github.com/MontpellierRessourcesImagerie/NaparIO/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    NaparIO = napario
